<resources>
    <string name="app_name">Meet Express</string>
    <string name="subtitle">Meet, Enjoy and Befriend</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="log_in">Log in</string>

    <string name="repeat_password">Repeat password</string>
    <string name="sign_up">Sign up</string>
    <string name="next">Next</string>

    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="age">Age</string>
    <string name="city">City</string>

    <string name="create_event">Create event</string>
    <string name="find_event">Find event</string>
    <string name="my_events">My events</string>
    <string name="number_of_members">Number of members</string>
    <string name="place">Place</string>
    <string name="preference_file_key">prefs</string>

    <string-array name="categories">
        <item>Sport</item>
        <item>Party</item>
        <item>Education</item>
        <item>Culture</item>
        <item>E-sport</item>
    </string-array>


    <string name="take_part">Take part</string>

    <string name="cancel">Cancel</string>
    <string name="search">Search</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>

    <string name="edit_account">Edit my account</string>
    <string name="settings">Settings</string>
    <string name="about">About the app</string>

    <string name="dont_have_account">No account? Create it now</string>
    <string name="date">Date (DD.MM.YYYY)</string>
    <string name="change_photo">Change photo</string>
    <string name="sign_up_prompt"><u>Don\'t have an account. Sign up</u></string>
    <string name="map">Map</string>Fix
    <string name="defaultCategory">Sport</string>
    <string name="defaultTitle">Title</string>
    <string name="defaultDate">01.01.2019</string>
    <string name="defaultTime">00:00</string>
    <string name="defaultPlace">Wrocław, Wittiga 15 Street</string>
    <string name="slash">/</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_out">Log out</string>
    <string name="save">Save</string>
    <string name="categories">Categories:</string>
    <string name="nearby">Only events from your nearby</string>
    <string name="not_take_part">Not take part</string>
    <string name="category">Category:</string>
    <string name="modify">Modify</string>
    <string name="back">Back</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="screen">Screen</string>
    <string name="darkTheme">Dark Theme</string>
    <string name="sound">Sound</string>
    <string name="vibrations">Vibrations</string>
    <string name="vibrate">Vibrate</string>
    <string name="turn_sound">Turn sound</string>
    <string name="chooseRingtone">Choose ringtone</string>
    <string name="no_events">No events</string>
    <string name="change_category">Change category</string>
    <string name="select_category_of_your_event">Select category of your event:</string>

</resources>
