<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/screen">

        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            app:key="theme"
            app:title="@string/darkTheme" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/sound">

        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            app:key="sound"
            app:title="@string/turn_sound" />

        <ListPreference
            app:iconSpaceReserved="false"
            app:dependency="sound"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="chooseRingtone"
            app:title="@string/chooseRingtone"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/vibrations">

        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            app:key="vibrations"
            app:title="@string/vibrate" />

    </PreferenceCategory>

</PreferenceScreen>
