<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    android:background="@drawable/signupback">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="181dp"
        android:layout_height="150dp"
        android:layout_marginTop="60dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="288dp"
        android:layout_height="59dp"
        android:layout_marginTop="20dp"
        android:background="@color/design_default_color_background"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:padding="15dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="289dp"
        android:layout_height="61dp"
        android:layout_marginTop="16dp"
        android:background="@color/design_default_color_background"
        android:ems="10"
        android:hint="@string/surname"
        android:inputType="textPassword"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="289dp"
        android:layout_height="61dp"
        android:layout_marginTop="16dp"
        android:background="@color/design_default_color_background"
        android:ems="10"
        android:hint="@string/age"
        android:inputType="textPassword"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="289dp"
        android:layout_height="61dp"
        android:layout_marginTop="16dp"
        android:background="@color/design_default_color_background"
        android:ems="10"
        android:hint="@string/city"
        android:inputType="textPassword"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText3" />

    <Button
        android:id="@+id/button"
        android:layout_width="141dp"
        android:layout_height="47dp"
        android:layout_marginBottom="132dp"
        android:background="#5576E3"
        android:text="@string/sign_up"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText3"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>