<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100">

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="40"
        android:scaleType="centerCrop"
        android:src="@drawable/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="20dp"
        android:layout_weight="60"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/name"
                style="@style/TextAppearance.MaterialComponents.Headline4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/defaultTitle" />

            <TextView
                android:id="@+id/category"
                style="@style/TextAppearance.MaterialComponents.Headline5"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="4dp"
                android:gravity="end"
                android:text="@string/defaultCategory"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/ic_access_time_24dp" />

            <TextView
                android:id="@+id/date"
                style="@style/TextAppearance.MaterialComponents.Headline5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/defaultDate"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/time"
                style="@style/TextAppearance.MaterialComponents.Headline5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/defaultTime"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/ic_place_24dp" />

            <TextView
                android:id="@+id/address"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/defaultPlace"
                android:textSize="14sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/ic_person_24dp" />

            <TextView
                android:id="@+id/membersActual"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="10"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/membersSlash"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/slash"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/membersMax"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="12"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="30dp"
        android:paddingHorizontal="16dp"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/map_btn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:padding="10dp"
            android:text="@string/map"
            android:textColor="@color/white"
            app:icon="@drawable/ic_map_24dp"
            app:iconTint="@color/white" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/take_part_btn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:padding="10dp"
            android:text="@string/take_part"
            android:textColor="@color/white"
            app:icon="@drawable/ic_person_add_white_24dp"
            app:iconTint="@color/white" />

    </LinearLayout>

</LinearLayout>
