<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/startback"
    tools:context=".StartActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="181dp"
        android:layout_height="150dp"
        android:layout_marginTop="60dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="casual"
        android:text="@string/app_name"
        android:textColor="#FFFFFF"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="257dp"
        android:layout_height="71dp"
        android:fontFamily="casual"
        android:text="@string/subtitle"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button"
        android:layout_width="200dp"
        android:layout_height="60dp"
<<<<<<< HEAD
        android:layout_marginBottom="132dp"
        android:background="@drawable/radius_button"
        android:fontFamily="casual"
        android:text="@string/log_in"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
=======
        android:layout_marginTop="36dp"
        android:background="#5576E3"
        android:text="@string/log_in"
        android:textColor="#ffffff"
>>>>>>> 426447cd3ca1250e94b3a3466b357a12b43d743c
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/button2"
        android:layout_width="200dp"
        android:layout_height="60dp"
<<<<<<< HEAD
        android:layout_marginBottom="132dp"
        android:background="@drawable/radius_button"
        android:fontFamily="casual"
        android:text="@string/sign_up"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
=======
        android:layout_marginTop="44dp"
        android:background="#5576E3"
        android:text="@string/sign_up"
        android:textColor="#ffffff"
>>>>>>> 426447cd3ca1250e94b3a3466b357a12b43d743c
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

</androidx.constraintlayout.widget.ConstraintLayout>