<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/signupback"
    tools:context=".SignUpActivity">

    <EditText
        android:id="@+id/editText3"
        android:layout_width="288dp"
        android:layout_height="59dp"
        android:layout_marginTop="20dp"
        android:background="@color/design_default_color_background"
        android:ems="10"
        android:hint="@string/login"
        android:inputType="textPersonName"

        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="289dp"
        android:layout_height="61dp"
        android:layout_marginTop="24dp"
        android:background="@color/design_default_color_background"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText3" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="289dp"
        android:layout_height="61dp"
        android:layout_marginTop="24dp"
        android:background="@color/design_default_color_background"
        android:ems="10"
        android:hint="@string/repeat_password"
        android:inputType="textPassword"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText4" />

    <Button
        android:id="@+id/button2"
        android:layout_width="141dp"
        android:layout_height="47dp"
        android:layout_marginTop="36dp"
        android:background="#5576E3"
        android:text="Next"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText5" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="181dp"
        android:layout_height="150dp"
        android:layout_marginTop="64dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/sign_up"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />
</androidx.constraintlayout.widget.ConstraintLayout>